testing/framework/resources/Advanced/Failing/mondrian/query6192.e
USA	CA	Richmond	8401	Mildred Bartz	Mildred Bartz	M	M	High School Degree	$70K - $90K
USA	CA	San Jose	7314	Michael Cellini	Michael Cellini	F	M	Partial High School	$30K - $50K
